--- a/index.html
+++ b/index.html
@@ -23,5 +23,41 @@
             <a href="">Golang</a>
         </div>
     </section>
+    <section class="lang-code" id = "cpp">
+      <h1>Program to print hello world in <br>
+    C++</h1>
+    <p>#include &ltiostream&gt <br> <br>
+    int main() { <br>
+    &nbsp;  cout << "Hello, World!"; <br>
+    &nbsp;  return 0; <br>
+    }</p>
+    </section>
+    <section class="lang-code" id = "haskell">
+        <h1>Program to print hello world in <br>
+      Haskell</h1>
+      <p>main = putStrLn "Hello, World!"</p>
+      </section>
+      <section class="lang-code" id = "python">
+        <h1>Program to print hello world in <br>
+      Python</h1>
+      <p>print("Hello, World!")</p>
+      </section>
+      <section class="lang-code" id = "java">
+        <h1>Program to print hello world in <br>
+      Java</h1>
+      <p>class Hello { <br> <br>
+    &nbsp; public static void main(String[] args) { <br>
+    &nbsp; &nbsp; System.out.println("Hello, World!"); <br>
+    &nbsp; } <br>
+}</p>
+      </section>
+      <section class="lang-code" id = "golang">
+        <h1>Program to print hello world in <br>
+      Golang</h1>
+      <p>package main <br> <br>
+    import "fmt" <br> <br>
+
+</p>
+      </section>
 </body>
 </html>
