--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
 
         <h2 class = "lang-choice">Select your preferred language</h2>
         <div class="lang">
-            <a href="">C++</a>
-            <a href="">Haskell</a>
-            <a href="">Java</a>
-            <a href="">Python</a>
-            <a href="">Golang</a>
+            <a href="#cpp">C++</a>
+            <a href="#haskell">Haskell</a>
+            <a href="#python">Python</a>
+            <a href="#java">Java</a>
+            <a href="#golang">Golang</a>
         </div>
     </section>
     <section class="lang-code" id = "cpp">
@@ -56,7 +56,9 @@
       Golang</h1>
       <p>package main <br> <br>
     import "fmt" <br> <br>
-
+    func main() { <br>
+     &nbsp; fmt.Println("Hello, World!"); <br>
+    }
 </p>
       </section>
 </body>
